# ruqad-demonstrator

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Makefile  README.md  RELEASE_GUIDELINES.md  dependencies.txt  pylinkahead.ini  pylinkahead.ini.example  pyproject.toml  qualitycheck_config.example.toml  requirements.txt  secrets.example.sh  test-schema.py  tox.ini
.docker/: Dockerfile  cert.sh  docker-compose.yml  run.sh  tester.yml  tester_pycaosdb.ini
docker/: Dockerfile  pylinkahead.ini  readme.md
end-to-end-tests/: test_crawler.py  test_kadi.py
end-to-end-tests/data/crawler_data/ruqad/1222/: export.eln
end-to-end-tests/data/crawler_data/ruqad/1223/: export.eln
linkahead-setup/: datamodel.yaml  insert_datamodel.sh  pylinkahead.ini
performance-tests/: test.py
playground/: s3.md
src/doc/: Makefile  conf.py  index.rst
src/ruqad/: __init__.py  crawler.py  kadi.py  monitor.py  qualitycheck.py
src/ruqad/crawler_extensions/: converters.py  transformers.py
src/ruqad/quality/: qualitycheck.py  qualitycheck_secrets.example.toml
src/ruqad/resources/crawler-settings/: cfood.yaml  datamodel.yaml  identifiables.yaml
unittests/: test_kadi.py  test_qualitycheck.py  test_template.py
