[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fair-dataspaces-ruqad"
description = "A tool for quality assured data integration from Kadi to LinkAhead."
version = "0.0.1"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
        {name = "Henrik tom Wörden", email="h.tomwoerden@indiscale.com"},
        {name = "Timm Fitschen", email= "t.fitschen@indiscale.com"}
]
maintainers = [
        {name = "Henrik tom Wörden", email="h.tomwoerden@indiscale.com"}
]
keywords = ["Data management", "Research data management"]
classifiers = [
            "Programming Language :: Python :: 3",
            "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
            "Operating System :: OS Independent",
]
requires-python = ">= 3.8"
dependencies = [
             "linkahead"
]

[project.urls]
Homepage = "https://getlinkahead.com"
Documentation = "https://docs.indiscale.com"
Repository = "https://gitlab.indiscale.com/caosdb/src/linkahead-python-package-template"
Issues = "https://gitlab.indiscale.com/caosdb/src/linkahead-python-package-template/-/issues"
Changelog = "https://gitlab.indiscale.com/caosdb/src/linkahead-python-package-template/-/blob/main/CHANGELOG.md?ref_type=heads"

