[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ruqad"
description = "Quality assured data integration from Kadi to LinkAhead."
version = "0.1.0"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
        {name = "Henrik tom Wörden", email="h.tomwoerden@indiscale.com"},
        {name = "Timm Fitschen", email= "t.fitschen@indiscale.com"}
]
maintainers = [
        {name = "Henrik tom Wörden", email="h.tomwoerden@indiscale.com"}
]
keywords = ["Data management", "Research data management"]
classifiers = [
            "Programming Language :: Python :: 3",
            "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
            "Operating System :: OS Independent",
]
requires-python = ">= 3.8"
dependencies = [
             "linkahead",
             "caoscrawler[rocrate] @ git+https://gitlab.indiscale.com/caosdb/src/caosdb-crawler.git@96ae0ada880049eec7673637816b20360a0d63cf",
             "kadi-apy",
             "boto3>=1.35",
             "toml>=0.10",
]

[project.urls]
Homepage = "https://getlinkahead.com"
Documentation = "https://docs.indiscale.com"
Repository = "https://gitlab.indiscale.com/caosdb/src/linkahead-python-package-template"
Issues = "https://gitlab.indiscale.com/caosdb/src/linkahead-python-package-template/-/issues"
Changelog = "https://gitlab.indiscale.com/caosdb/src/linkahead-python-package-template/-/blob/main/CHANGELOG.md?ref_type=heads"

[project.optional-dependencies]
dev = [
    "autopep8",
    "pylint",
    "ruqad[test]",
]
test = [
    "tox",
    "pytest",
    "pytest-env",
    "pytest-cov",
]
all = [
    "ruqad[dev]",
]

[project.scripts]
rq_monitor = "ruqad.monitor:monitor"
rq_qualitycheck = "ruqad.qualitycheck:main"

[tool.setuptools.package-data]
ruqad = ["resources/**/*"]

[tool.pytest.ini_options]
env = [
    "S3_ACCESS_KEY_ID=1234",
    "S3_SECRET_ACCESS_KEY=1234",
    "GITLAB_PIPELINE_TOKEN=1234",
    "GITLAB_API_TOKEN=1234",
]
